v1.3.3 changed swagger reflection so that right properties are ignored
