# src/models/AssetContainer.ts
@@ -1,11 +1,8 @@
 import { StorageAccount } from './StorageAccount';
 
 export interface AssetContainer {
-    SinglePartitionID?: string
-    InteropID?: string
+    ID?: string
     Name: string
     HostUrlOverride?: string
     readonly StorageAccount?: StorageAccount
-    id?: string
-    timeStamp?: string
 }
