# src/models/StorageAccount.ts
@@ -3,5 +3,4 @@ export interface StorageAccount {
     Connected?: boolean
     Type?: 'DefaultBlob'
     HostUrl?: string
-    ConnectionString?: string
 }
